k8s/telegram-bot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegram-bot
  namespace: tbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegram-bot
  template:
    metadata:
      labels:
        app: telegram-bot
    spec:
      containers:
        - name: telegram-bot
          image: ghcr.io/niksipeikin/telegram-bot:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
