k8s/telegram-bot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: telegram-bot
  namespace: tbot
spec:
  selector:
    app: telegram-bot
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
